- Updated dependencies. - Updated strings to call for the correct item. - Several unnecessary updates to code to avoid pointless warnings.